feat: impl additions